src/indexer/rust_bindings.rs

/* automatically generated by rust-bindgen 0.57.0 */

// for now this is how I know how to do it until i figure out build.rs
// bindgen --whitelist-function '^rust.*' --whitelist-type '^rust.*' --whitelist-var '^rust.*'  src_c/rust.h

// #[allow(non_camel_case_types)]
// pub type size_t = ::std::os::raw::c_ulong;
// pub const MAX_INDEXERS: i32 = 6;
// pub const FULL: i32 = -1;
// pub const BAD_SCHEME: i32 = -2;

// extern "C" {
//     pub fn rust_init_indexer(rounds: u32, cards_per_round: *const u8) -> i32;
// }
// extern "C" {
//     pub fn rust_free_indexer(id: size_t) -> bool;
// }
// extern "C" {
//     pub fn rust_indexer_size(id: size_t, round: u32) -> u64;
// }
// extern "C" {
//     pub fn rust_index_all(id: size_t, cards: *const u8, indices: *mut u64) -> bool;
// }
// extern "C" {
//     pub fn rust_unindex(id: size_t, round: u32, index: u64, cards: *mut u8) -> bool;
// }

pub type IndexerPtr = *mut ::std::os::raw::c_void;

extern "C" {
    pub fn rust_init_indexer(
        rounds: u32,
        cards_per_round: *const u8,
        success: *mut bool,
    ) -> *mut ::std::os::raw::c_void;

    pub fn rust_free_indexer(indexer: *mut ::std::os::raw::c_void);

    pub fn rust_indexer_size(v_indexer: *mut ::std::os::raw::c_void, round: u32) -> u64;

    pub fn rust_index_all(
        v_indexer: *mut ::std::os::raw::c_void,
        cards: *const u8,
        indices: *mut u64,
    ) -> u64;

    pub fn rust_unindex(
        v_indexer: *mut ::std::os::raw::c_void,
        round: u32,
        index: u64,
        cards: *mut u8,
    ) -> bool;

    pub fn rust_index_round(
        v_indexer: *mut ::std::os::raw::c_void,
        cards: *const u8,
        ncards: u32,
    ) -> u64;
}
